# ESP32-MonitorWatch

./: CLAUDE.md  CMakeLists.txt  README.md  Transform.md  partitions-16MiB.csv  技术文档.md  项目文档.docx
.claude/: settings.local.json
.trae/rules/: project_rules.md
DataSheet/: 癫痫智能检测手环.docx
LowImprove/: Improve.md
components/BSP/: CMakeLists.txt
components/BSP/Buzzer/: Buzzer.c  Buzzer.h
components/BSP/Enable_esp32_CTL/: en.c  en.h
components/BSP/I2C/: CMakeLists.txt  i2c_driver.c  i2c_driver.h
components/BSP/KEY/: Key.c  Key.h
components/BSP/LED/: LED.c  LED.h
components/BSP/MQTT/: mqtt.c  mqtt.h  mqttUse.md  onenet_token.c  onenet_token.h  passwd.md
components/BSP/RTC/: rtc_driver.c  rtc_driver.h
components/Middlewares/: CMakeLists.txt  Task_Key.c  UI_Events.h
components/Middlewares/GetBatteryLevel/: GetBaLevel.c  GetBaLevel.h
components/Middlewares/MAX30102/: max30102.c  max30102.h
components/Middlewares/MPU6050/: Detect.md  MPU6050.c  MPU6050.h
components/Middlewares/MessageQueue/: MessageQueue.c  MessageQueue.h
components/Middlewares/OLED/: 1.py  OLED.c  OLED.h  OLED_Data.c  OLED_Data.h  OLED_Font.c  OLED_Font.h
html/: apcfg.html
main/: CMakeLists.txt  main.c
main/ULP/: shared_data.h  ulp_i2c_sw.h  ulp_main.c  ulp_use.md
note/: 2026-05-08.md  2026-05-09.md  2026-05-10.md  2026-05-20.md  2026-05-24.md  all.md
phone_app/esp32_monitor_app/: README.md  build_and_install.ps1  pubspec.yaml  pubspec_overrides.yaml  test_accesskey.ps1  test_api_direct.ps1  test_device_key.ps1  test_onenet_api.ps1  项目文档.md
phone_app/esp32_monitor_app/android/: build.gradle.kts
phone_app/esp32_monitor_app/android/app/: build.gradle.kts
phone_app/esp32_monitor_app/android/app/src/main/: AndroidManifest.xml
phone_app/esp32_monitor_app/android/app/src/main/kotlin/com/example/esp32_monitor_app/: MainActivity.kt
phone_app/esp32_monitor_app/lib/: main.dart
phone_app/esp32_monitor_app/lib/models/: device_config.dart  monitoring_snapshot.dart
phone_app/esp32_monitor_app/lib/pages/: config_page.dart  monitor_page.dart
phone_app/esp32_monitor_app/lib/services/: config_storage.dart  notification_service.dart  onenet_api_service.dart
phone_app/esp32_monitor_app/lib/utils/: onenet_token_generator.dart
phone_app/esp32_monitor_app/test/: onenet_token_generator_test.dart  widget_test.dart
